@@ -4646,7 +4646,7 @@ def run(verbosity=1, repeat=1):
     print('pointer size: %d bit' % (8 * SYSINFO[0]))
     print('sizeof(size_t): %d' % SYSINFO[1])
     print('sizeof(bitarrayobject): %d' % SYSINFO[2])
-    print('PY_UINT64_T defined: %s' % SYSINFO[5])
+    print('__GNUC__ defined: %s' % SYSINFO[5])
     print('USE_WORD_SHIFT: %s' % SYSINFO[7])
     print('DEBUG: %s' % DEBUG)
     suite = unittest.TestSuite()
